fix archive text align

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -316,6 +316,7 @@ a:visited {
 		clear: left;
 		width: 3em;
 		padding-right: 0.25em;
+		text-align: right;
 	}
 
 	.archive .post-list .post-title {
